--- a/Grocery/app/build.gradle
+++ b/Grocery/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
+    implementation 'com.github.mohammadatif:CircularImageView:1.0.1'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.0'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
