--- a/Grocery/app/build.gradle
+++ b/Grocery/app/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     implementation 'com.github.mohammadatif:CircularImageView:1.0.1'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
+    // image loading from firebase
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.0'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
