--- a/Grocery/app/src/main/AndroidManifest.xml
+++ b/Grocery/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:roundIcon="@id/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".MainUserActivity"></activity>
+        <activity android:name=".ProfileEditSellerActivity"></activity>
+        <activity android:name=".ProfileEditUserActivity" />
+        <activity android:name=".MainUserActivity" />
         <activity android:name=".MainSellerActivity" />
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".RegisterUserActivity" />
