--- a/Grocery/app/build.gradle
+++ b/Grocery/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+
 
     implementation 'com.github.mohammadatif:CircularImageView:1.0.1'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
